airflow/logs/dag_id=extract_load/run_id=manual__2025-05-04T19:53:58.338700+00:00/task_id=load_transactions/attempt=1.log
[2025-05-04T19:54:14.842+0000] {taskinstance.py:1103} INFO - Dependencies all met for dep_context=non-requeueable deps ti=<TaskInstance: extract_load.load_transactions manual__2025-05-04T19:53:58.338700+00:00 [queued]>
[2025-05-04T19:54:14.848+0000] {taskinstance.py:1103} INFO - Dependencies all met for dep_context=requeueable deps ti=<TaskInstance: extract_load.load_transactions manual__2025-05-04T19:53:58.338700+00:00 [queued]>
[2025-05-04T19:54:14.848+0000] {taskinstance.py:1308} INFO - Starting attempt 1 of 2
[2025-05-04T19:54:14.859+0000] {taskinstance.py:1327} INFO - Executing <Task(PythonOperator): load_transactions> on 2025-05-04 19:53:58.338700+00:00
[2025-05-04T19:54:14.864+0000] {standard_task_runner.py:57} INFO - Started process 4848 to run task
[2025-05-04T19:54:14.867+0000] {standard_task_runner.py:84} INFO - Running: ['airflow', 'tasks', 'run', 'extract_load', 'load_transactions', 'manual__2025-05-04T19:53:58.338700+00:00', '--job-id', '136', '--raw', '--subdir', 'DAGS_FOLDER/extract_load.py', '--cfg-path', '/tmp/tmp9fketehg']
[2025-05-04T19:54:14.868+0000] {standard_task_runner.py:85} INFO - Job 136: Subtask load_transactions
[2025-05-04T19:54:14.881+0000] {logging_mixin.py:150} WARNING - /home/airflow/.local/lib/python3.7/site-packages/airflow/settings.py:195 DeprecationWarning: The sql_alchemy_conn option in [core] has been moved to the sql_alchemy_conn option in [database] - the old setting has been used, but please update your config.
[2025-05-04T19:54:14.907+0000] {task_command.py:410} INFO - Running <TaskInstance: extract_load.load_transactions manual__2025-05-04T19:53:58.338700+00:00 [running]> on host 773728ee9afd
[2025-05-04T19:54:14.984+0000] {taskinstance.py:1547} INFO - Exporting env vars: AIRFLOW_CTX_DAG_OWNER='finbest' AIRFLOW_CTX_DAG_ID='extract_load' AIRFLOW_CTX_TASK_ID='load_transactions' AIRFLOW_CTX_EXECUTION_DATE='2025-05-04T19:53:58.338700+00:00' AIRFLOW_CTX_TRY_NUMBER='1' AIRFLOW_CTX_DAG_RUN_ID='manual__2025-05-04T19:53:58.338700+00:00'
[2025-05-04T19:54:14.999+0000] {logging_mixin.py:150} INFO - Загружено 4652 строк из /data/bank_transactions.csv
[2025-05-04T19:54:15.004+0000] {logging_mixin.py:150} INFO - Удален столбец 'id'
[2025-05-04T19:54:15.005+0000] {crypto.py:83} WARNING - empty cryptography key - values will not be stored encrypted.
[2025-05-04T19:54:15.005+0000] {base.py:73} INFO - Using connection ID 'postgres_default' for task execution.
[2025-05-04T19:54:15.010+0000] {sql.py:375} INFO - Running statement: DELETE FROM staging.transactions WHERE transaction_id = ANY(%s), parameters: None
[2025-05-04T19:54:15.010+0000] {taskinstance.py:1824} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/operators/python.py", line 181, in execute
    return_value = self.execute_callable()
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/operators/python.py", line 198, in execute_callable
    return self.python_callable(*self.op_args, **self.op_kwargs)
  File "/opt/airflow/dags/extract_load.py", line 94, in load_transactions
    hook.run("DELETE FROM staging.transactions WHERE transaction_id = ANY(%s)", (transaction_ids,))
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/providers/common/sql/hooks/sql.py", line 349, in run
    self._run_command(cur, sql_statement, parameters)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/providers/common/sql/hooks/sql.py", line 380, in _run_command
    cur.execute(sql_statement)
psycopg2.errors.SyntaxError: syntax error at or near "%"
LINE 1: ...ETE FROM staging.transactions WHERE transaction_id = ANY(%s)
                                                                    ^

[2025-05-04T19:54:15.021+0000] {taskinstance.py:1350} INFO - Marking task as UP_FOR_RETRY. dag_id=extract_load, task_id=load_transactions, execution_date=20250504T195358, start_date=20250504T195414, end_date=20250504T195415
[2025-05-04T19:54:15.029+0000] {standard_task_runner.py:109} ERROR - Failed to execute job 136 for task load_transactions (syntax error at or near "%"
LINE 1: ...ETE FROM staging.transactions WHERE transaction_id = ANY(%s)
                                                                    ^
; 4848)
[2025-05-04T19:54:15.038+0000] {local_task_job_runner.py:225} INFO - Task exited with return code 1
[2025-05-04T19:54:15.056+0000] {taskinstance.py:2653} INFO - 0 downstream tasks scheduled from follow-on schedule check
